# PullShark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  report.json
.github/workflows/: ci.yml  publish.yml
notebooks/: PullShark.ipynb
pullshark/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py
tests/: test_pullshark.py
